# wasm_rubickCube

./: .gitignore  Cargo.toml  README.md
frontend/: index.html
src/: main.rs
